crates/math-core/tests/snapshots/conversion_test__overbrace.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\overbrace{a+b+c}^{d}"
---
<math>
    <mover>
        <mover accent="true">
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
                <mo>+</mo>
                <mi>c</mi>
            </mrow>
            <mo>⏞</mo>
        </mover>
        <mi>d</mi>
    </mover>
</math>
