crates/math-core/tests/snapshots/conversion_test__overset_plus.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\overset{!}{+}"
---
<math>
    <mover>
        <mo lspace="0" rspace="0">+</mo>
        <mo form="postfix">!</mo>
    </mover>
</math>
