crates/math-core/tests/snapshots/conversion_test__overset_plus_subscript_before_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\overset{a}+_2)"
---
<math>
    <mi>x</mi>
    <msub>
        <mover>
            <mo lspace="0" rspace="0">+</mo>
            <mi>a</mi>
        </mover>
        <mn>2</mn>
    </msub>
    <mo stretchy="false">)</mo>
</math>
