crates/math-core/tests/snapshots/conversion_test__overset_prime.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\overset{'}{=}x"
---
<math>
    <mover>
        <mo lspace="0">=</mo>
        <msup>
            <mrow></mrow>
            <mo>′</mo>
        </msup>
    </mover>
    <mi>x</mi>
</math>
