crates/math-core/tests/snapshots/conversion_test__overset_real_prime.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\overset{\\prime}{=}x"
---
<math>
    <mover>
        <mo lspace="0">=</mo>
        <mo>′</mo>
    </mover>
    <mi>x</mi>
</math>
