crates/math-core/tests/snapshots/conversion_test__overset_spacing.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x\\overset{!}{=}x"
---
<math>
    <mi>x</mi>
    <mover>
        <mo>=</mo>
        <mo form="postfix">!</mo>
    </mover>
    <mi>x</mi>
</math>
