crates/math-core/tests/snapshots/conversion_test__overset_with_left_right.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\overset{!}{\\left(x+\\right)}"
---
<math>
    <mover>
        <mrow>
            <mo>(</mo>
            <mi>x</mi>
            <mo lspace="0" rspace="0">+</mo>
            <mo rspace="0.1667em">)</mo>
        </mrow>
        <mo form="postfix">!</mo>
    </mover>
</math>
