crates/math-core/tests/snapshots/conversion_test__overset_with_prime.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\overset{!}{=}'x"
---
<math>
    <msup>
        <mover>
            <mo lspace="0">=</mo>
            <mo form="postfix">!</mo>
        </mover>
        <mo>′</mo>
    </msup>
    <mi>x</mi>
</math>
